# ktgt-uav-desktop

heliview/: CMakeLists.txt
heliview/cfg/: heliview.cfg  plugins.cfg  resources.cfg
heliview/cmake/modules/: FindQwt5.cmake
heliview/media/materials/scripts/: world.material
heliview/src/: ApplicationFrame.cpp  ApplicationFrame.h  ApplicationFrame.ui  CMakeLists.txt  CVWebcamView.cpp  CVWebcamView.h  CommandLine.h  ConnectionDialog.cpp  ConnectionDialog.h  ConnectionDialog.ui  ControllerView.cpp  ControllerView.h  DeviceController.cpp  DeviceController.h  Gamepad.h  HeliView.cpp  HeliView.qrc  LineGraph.cpp  LineGraph.h  LinuxGamepad.cpp  LinuxGamepad.h  Logger.cpp  Logger.h  NetworkDeviceController.cpp  NetworkDeviceController.h  OgreWidget.cpp  OgreWidget.h  SerialDeviceController.cpp  SerialDeviceController.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  SimulatedDeviceController.cpp  SimulatedDeviceController.h  ThrottleThread.cpp  ThrottleThread.h  Utility.h  VideoView.cpp  VideoView.h  VirtualView.cpp  (+3 more)
